--- a/juise.html
+++ b/juise.html
@@ -175,7 +175,7 @@
                         <div class="flex items-center justify-between text-white">
                             <div class="flex items-center space-x-4 space-x-reverse">
                                 <div class="text-4xl">🥤🍌</div>
-                                <h3 class="text-2xl font-bold">السموثي</h3>
+                                <h3 class="text-2xl font-bold">السموزي</h3>
                             </div>
                             <div class="text-2xl transform transition-transform duration-300" id="smoothies-arrow">▼</div>
                         </div>
@@ -183,31 +183,31 @@
                     <div id="smoothies" class="category-content bg-white p-6 hidden">
                         <div class="space-y-4">
                             <div class="flex justify-between items-center border-b border-gray-100 pb-3">
-                                <span class="text-lg font-medium text-gray-800">سموثي توت</span>
+                                <span class="text-lg font-medium text-gray-800">سموزي توت</span>
                                 <div class="text-green-500 font-bold">
                                     <span class="text-sm">وسط 37 جنيه</span> | <span class="text-sm">كبير 47 جنيه</span>
                                 </div>
                             </div>
                             <div class="flex justify-between items-center border-b border-gray-100 pb-3">
-                                <span class="text-lg font-medium text-gray-800">سموثي تروبيكال</span>
+                                <span class="text-lg font-medium text-gray-800">سموزي تروبيكال</span>
                                 <div class="text-green-500 font-bold">
                                     <span class="text-sm">وسط 39 جنيه</span> | <span class="text-sm">كبير 49 جنيه</span>
                                 </div>
                             </div>
                             <div class="flex justify-between items-center border-b border-gray-100 pb-3">
-                                <span class="text-lg font-medium text-gray-800">سموثي خوخ</span>
+                                <span class="text-lg font-medium text-gray-800">سموزي خوخ</span>
                                 <div class="text-green-500 font-bold">
                                     <span class="text-sm">وسط 36 جنيه</span> | <span class="text-sm">كبير 46 جنيه</span>
                                 </div>
                             </div>
                             <div class="flex justify-between items-center border-b border-gray-100 pb-3">
-                                <span class="text-lg font-medium text-gray-800">سموثي أفوكادو</span>
+                                <span class="text-lg font-medium text-gray-800">سموزي أفوكادو</span>
                                 <div class="text-green-500 font-bold">
                                     <span class="text-sm">وسط 40 جنيه</span> | <span class="text-sm">كبير 50 جنيه</span>
                                 </div>
                             </div>
                             <div class="flex justify-between items-center">
-                                <span class="text-lg font-medium text-gray-800">سموثي أناناس</span>
+                                <span class="text-lg font-medium text-gray-800">سموزي أناناس</span>
                                 <div class="text-green-500 font-bold">
                                     <span class="text-sm">وسط 38 جنيه</span> | <span class="text-sm">كبير 48 جنيه</span>
                                 </div>
@@ -283,7 +283,7 @@
                                 </div>
                             </div>
                             <div class="flex justify-between items-center border-b border-gray-100 pb-3">
-                                <span class="text-lg font-medium text-gray-800">أوريو سموثي</span>
+                                <span class="text-lg font-medium text-gray-800">أوريو سموزي</span>
                                 <div class="text-purple-500 font-bold">
                                     <span class="text-sm">وسط 39 جنيه</span> | <span class="text-sm">كبير 49 جنيه</span>
                                 </div>
